tests/error/pointer_to_tuple_decomposition.bz
// error: invalid type '*[int32]' for tuple decomposition
function main()
{
	let t = [int32]();
	let *[_] = &t;
}
